--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "typehero",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Practice typing on your keyboard and speed up wpm and accuracy",
   "main": "dist/index.js",
   "scripts": {
     "build": "malta source/buildtr.json",
     "buildev": "malta source/buildev.json",
     "start": "malta source/start.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepack": "npm build"
   },
   "author": "Federico Ghedina <federico.ghedina@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "malta": "^3.8.20",
+    "malta": "^3.9.0",
     "malta-dev-srv": "^1.0.6",
     "malta-header-comment": "^1.0.5",
     "malta-js-uglify": "^1.0.3",
